--- a/src/app/navbar/search-bar/search-bar.component.scss
+++ b/src/app/navbar/search-bar/search-bar.component.scss
@@ -4,14 +4,16 @@
 }
 
 .search-area {
-  width: 100%;
-  min-height: 250px;
-  transform: scaleY(0);
-  transform-origin: top;
-  padding: 1.5rem 1.5rem 3rem;
-  background-color: #fff;
-  box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
-  animation: grow .3s ease forwards;
+  // width: 100%;
+  // min-height: 250px;
+  // transform: scaleY(0);
+  // transform-origin: top;
+  // padding: 1.5rem 1.5rem 3rem;
+  // background-color: #fff;
+  // box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
+  // animation: grow .3s ease forwards;
+
+  padding: 67px 1.5rem 3rem;
 
   .close-btn {
     margin-left: auto;
