--- a/src/app/shared/modal/modal.component.scss
+++ b/src/app/shared/modal/modal.component.scss
@@ -2,6 +2,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  
+  &.isSrchArea {
+    justify-content: unset;
+    align-items: unset;
+    overflow: hidden;
+    overflow-y: auto;
+  }
 }
 
 .modal {
@@ -9,9 +16,16 @@
   width: auto;
   height: auto;
   background-color: #fff;
+  box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
   transition: width .3s ease, height .3s ease;
   animation: zoomIn .2s ease;
   overflow: hidden;
+
+  &.isSrchArea {
+    transform: scaleY(0);
+    transform-origin: top;
+    animation: grow .3s ease forwards;
+  }
 
   @media (max-width: 600px) {
     width: 100% !important;
