--- a/src/app/shared/modal/modal.component.scss
+++ b/src/app/shared/modal/modal.component.scss
@@ -4,6 +4,7 @@
   justify-content: center;
   
   &.isSrchArea {
+    display: block !important;
     justify-content: unset;
     align-items: unset;
     overflow: hidden;
