--- a/src/app/shared/modal/modal.component.scss
+++ b/src/app/shared/modal/modal.component.scss
@@ -22,6 +22,11 @@
   animation: zoomIn .2s ease;
   overflow: hidden;
 
+  @media (max-width: 600px) {
+    width: 100% !important;
+    height: 100% !important;
+  }
+
   &.isSrchArea {
     width: 100%;
     height: unset;
@@ -29,13 +34,13 @@
     transform: scaleY(0);
     transform-origin: top;
     animation: grow .3s ease forwards;
+
+    @media (max-width: 600px) {
+      height: unset !important;
+      min-height: 250px !important;
+    }
   }
 
-  @media (max-width: 600px) {
-    width: 100% !important;
-    height: 100% !important;
-  }
-  
   .top {
     position: absolute;
     left: 0;
