--- a/src/app/product/search-results/search-results.component.scss
+++ b/src/app/product/search-results/search-results.component.scss
@@ -23,7 +23,7 @@
   
   .products {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
     gap: 1.5rem;
     width: 100%;
 
@@ -32,15 +32,29 @@
       display: flex;
       flex-direction: column;
       width: 100%;
-      padding: 1rem;
+      
       background-color: #fff;
+      transition: all .3s ease;
       overflow: hidden;
 
       .product-image {
+        position: relative;
         display: block;
         width: 100%;
         height: 250px;
         background-color: #fff;
+        padding: 1rem;
+
+        &::after {
+          content: '';
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          left: 0;
+          top: 0;
+          background-color: rgba(185, 185, 185, 0.1);
+          z-index: 1;
+        }
 
         img {
           height: 100%;
@@ -56,6 +70,7 @@
         width: 100%;
         height: 100%;
         margin-top: 1.5rem;
+        padding: 0 1rem 1rem;
         background-color: #fff;
         overflow: hidden;
 
@@ -90,6 +105,7 @@
         align-items: center;
         justify-content: space-between;
         width: 100%;        
+        padding: 0 1rem 1rem;
 
         .add-to-cart-btn {
           margin-left: auto;
