--- a/src/app/navbar/search-bar/search-bar.component.scss
+++ b/src/app/navbar/search-bar/search-bar.component.scss
@@ -85,6 +85,13 @@
   }
 
   .search-results {
+    padding: 0.5rem;
+    margin-bottom: 0.5rem;
+    border-radius: 4px;
+    background-color: #e6e9f0;
+  }
+
+  .search-results {
     width: 100%;
     height: inherit;
     margin-top: 2rem;
