--- a/src/app/navbar/search-bar/search-bar.component.html
+++ b/src/app/navbar/search-bar/search-bar.component.html
@@ -47,7 +47,7 @@
   
       <div class="search-results">
         <!-- Category Selection -->
-        <div [formGroup]="srchForm">
+        <div [formGroup]="srchForm" class="srch-category">
           <select formControlName="categoryId">
             <option [ngValue]="null">All</option>
             <option 
