--- a/src/app/product/product-details/slider/lightbox/lightbox.component.scss
+++ b/src/app/product/product-details/slider/lightbox/lightbox.component.scss
@@ -101,7 +101,8 @@
           width: 100%;
           height: 100%;          
           object-fit: contain;
-          transition: transform .3s ease, transform-origin .1s ease;
+          transition: transform .2s linear, 
+          transform-origin .1s linear;
         }
 
         &.zoomed-in {
