--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -3,3 +3,57 @@
   padding: 70px 1.5rem 0;
 }
 
+.video-container {
+  position: relative;
+  max-width: 900px;
+  margin: 3rem auto;
+
+  &:hover {
+    .controls-wrapper {
+      opacity: 1;
+    }
+  }
+  
+  video {
+    width: 100%;
+  }
+
+  .controls-wrapper {
+    opacity: 0;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: auto;
+    backdrop-filter: saturate(120%) blur(20px);
+    transition: opacity .2s ease;
+
+    .progress-bar {
+      width: 100%;
+      height: 6px;
+      background-color: rgba(0, 0, 0, 0.4);
+      cursor: pointer;
+      
+      &-inner {
+        position: relative;
+        width: 0;
+        height: inherit;
+        background-color: #1e7deb;
+        transition: width .4s linear;
+      }
+    }
+
+    .controls {
+      display: flex;
+      align-items: center;
+      width: 100%;
+      padding: 0.2rem 0.6rem;
+      background-color: rgba(0, 0, 0, 0.7);
+      
+      .material-icons {
+        color: #fff;
+      }
+    }
+  }
+}
+
