--- a/src/app/product/shopping-bag/shopping-bag.component.scss
+++ b/src/app/product/shopping-bag/shopping-bag.component.scss
@@ -25,7 +25,7 @@
     width: 100%;
     height: 100%;
     padding: 0 1.5rem;
-    padding-bottom: 70px;
+    padding-bottom: 9rem;
     animation: reveal 0.4s ease;
   }
 
