Change history's label

--- a/src/app/navbar/search-bar/search-bar.component.html
+++ b/src/app/navbar/search-bar/search-bar.component.html
@@ -78,7 +78,7 @@
         
         <div *ngIf="srchHistory && !srchControl.value">
           <div class="title">
-            <p>Search history</p>
+            <p>Browse history</p>
             <button 
               (click)="clearSrchHistory()" 
               class="clear-history-btn"
